stadt wien orthofoto, start zoom/lonlat

--- a/erster-versuch.ipynb
+++ b/erster-versuch.ipynb
@@ -46,7 +46,8 @@
     ")\n",
     "\n",
     "FMZK_VERKEHR1_WFS_URL = WFS_BASE_URL.format(\"ogdwien:FMZKVERKEHR1OGD\")\n",
-    "FMZK_VERKEHR2_WFS_URL = WFS_BASE_URL.format(\"ogdwien:FMZKVERKEHR2OGD\")"
+    "FMZK_VERKEHR2_WFS_URL = WFS_BASE_URL.format(\"ogdwien:FMZKVERKEHR2OGD\")\n",
+    "ORTHOFOTO_TILE_URL = \"https://mapsneu.wien.gv.at/wmts/lb/farbe/google3857/{z}/{y}/{x}.jpeg\""
    ]
   },
   {
@@ -118,14 +119,20 @@
     "        \"color\": GEHSTEIGE_STROKE_COLOUR,\n",
     "        \"weight\": 0.1,\n",
     "    },\n",
-    "    tiles=xyzservices.providers.Stadia.AlidadeSmooth,\n",
+    "    \n",
+    "    map_kwds={\n",
+    "        \"center\": {\"lat\": 48.2515, \"lng\": 16.4549}\n",
+    "    },\n",
+    "    zoom_start=18,\n",
+    "    tiles=ORTHOFOTO_TILE_URL,\n",
+    "    attr=\"Datenquelle: Stadt Wien – data.wien.gv.at\",\n",
     ")\n",
     "uebersichtskarte = parkplaetze.explore(\n",
     "    m=uebersichtskarte,\n",
     "    style_kwds={\n",
     "        \"fillColor\": PARKPLAETZE_FILL_COLOUR,\n",
     "        \"fillOpacity\": 0.9,\n",
-    "        \"color\": GEHSTEIGE_STROKE_COLOUR,\n",
+    "        \"color\": PARKPLAETZE_STROKE_COLOUR,\n",
     "        \"weight\": 0.1,\n",
     "    },\n",
     ")\n",
