--- a/strategischer.ipynb
+++ b/strategischer.ipynb
@@ -11,6 +11,7 @@
     "import geopandas\n",
     "import joblib\n",
     "import pathlib\n",
+    "import urllib.parse\n",
     "import xyzservices"
    ]
   },
@@ -36,24 +37,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "CRS = \"EPSG:31256\"\n",
+    "\n",
     "WFS_BASE_URL = (\n",
     "    \"https://data.wien.gv.at/daten/geo\"\n",
     "    \"?service=WFS\"\n",
     "    \"&version=2.0.0\"\n",
     "    \"&request=GetFeature\"\n",
-    "    \"&srsName=EPSG:31256\"\n",
+    "    f\"&srsName={CRS}\"\n",
     "    \"&typeNames={:s}\"\n",
     ")\n",
     "\n",
-    "FMZK_VERKEHR1_WFS_URL = WFS_BASE_URL.format(\"ogdwien:FMZKVERKEHR1OGD\")\n",
-    "FMZK_VERKEHR2_WFS_URL = WFS_BASE_URL.format(\"ogdwien:FMZKVERKEHR2OGD\")\n",
-    "BELAGSARTEN_WFS_URL = (\n",
+    "PARKFLAECHEN_AUF_GEHSTEIG_WFS_URL = (\n",
     "    WFS_BASE_URL.format(\"ogdwien:SISBELAGOGD\")\n",
-    "    + \"&cql_filter=TYPE_TXT=%27Parkfl%C3%A4che%20Gehsteig%27\"\n",
+    "    + \"&\"\n",
+    "    + urllib.parse.urlencode({\"cql_filter\": \"TYPE_TXT='Parkfläche Gehsteig'\"})\n",
+    ")\n",
+    "GEHSTEIG_WFS_URL = (\n",
+    "    WFS_BASE_URL.format(\"ogdwien:SISBELAGOGD\")\n",
+    "    + \"&\"\n",
+    "    + urllib.parse.urlencode({\"cql_filter\": \"TYPE_TXT='Gehsteig'\"})\n",
     ")\n",
     "ORTHOFOTO_TILE_URL = (\n",
     "    \"https://mapsneu.wien.gv.at/wmts/lb/farbe/google3857/{z}/{y}/{x}.jpeg\"\n",
+    ")\n",
+    "xyzservices.providers.WienOGD = xyzservices.Bunch(\n",
+    "    Orthofoto=xyzservices.TileProvider(\n",
+    "        name=\"Orthofoto Wien\",\n",
+    "        url=ORTHOFOTO_TILE_URL,\n",
+    "        attribution=\"Datenquelle: Stadt Wien – data.wien.gv.at\",\n",
+    "    )\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5191cb49-8337-4da8-8639-98e074979334",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_DISTANCE = 0.5"
    ]
   },
   {
@@ -85,33 +109,69 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3b8ab2a5-392a-45bb-9443-4489bda17bda",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "belagsarten = cached_geopandas_read_file(BELAGSARTEN_WFS_URL)\n",
-    "gehsteige = belagsarten[belagsarten[\"TYPE_TXT\"] == \"Gehsteig\"]\n",
-    "gehsteige.crs = \"EPSG:31256\"\n",
-    "# del belagsarten\n",
-    "belagsarten.crs = \"EPSG:31256\"\n",
-    "\n",
-    "belagsarten.to_file(\"/tmp/belagsarten.gpkg\")\n",
-    "\n",
-    "gehsteige"
+    "parkflaechen = cached_geopandas_read_file(PARKFLAECHEN_AUF_GEHSTEIG_WFS_URL)\n",
+    "parkflaechen.crs = CRS\n",
+    "parkflaechen"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b56c8d13-06cc-4665-9dc4-bf47c28de5a0",
+   "id": "35b6b563-b9c6-44b3-82d9-5724f04fbc74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fmzk_verkehr1 = cached_geopandas_read_file(FMZK_VERKEHR1_WFS_URL)\n",
-    "parkplaetze = fmzk_verkehr1[fmzk_verkehr1.LAYER == \"Ruhender Verkehr\"]\n",
-    "parkplaetze.crs = \"EPSG:31256\"\n",
-    "del fmzk_verkehr1\n",
-    "\n",
-    "parkplaetze"
+    "gehsteig = cached_geopandas_read_file(GEHSTEIG_WFS_URL)\n",
+    "gehsteig.crs = CRS\n",
+    "gehsteig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dab98146-6333-4f1b-b34c-b9f5e7ca2e90",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "gehsteig_neben_parkflaeche = gehsteig.sjoin_nearest(\n",
+    "    parkflaechen,\n",
+    "    max_distance=MAX_DISTANCE,\n",
+    "    lsuffix=\"\",\n",
+    "    rsuffix=\"parkflaeche\",\n",
+    "    distance_col=\"Abstand Gehsteig/Parkfläche\",\n",
+    ")\n",
+    "gehsteig_neben_parkflaeche"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de9e5828-78cd-4b8f-bd74-58c0bd2df7d2",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "gehsteig_neben_parkflaeche[\"Abstand Gehsteig/Parkfläche\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8688876a-8be0-47d3-bf1f-4bec3c18e3c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = gehsteig_neben_parkflaeche.dissolve().explode()  # .area.describe()"
    ]
   },
   {
@@ -122,7 +182,7 @@
    "outputs": [],
    "source": [
     "# uebersichtskarte = gehsteige.explore(\n",
-    "uebersichtskarte = belagsarten.explore(\n",
+    "uebersichtskarte = gehsteig_neben_parkflaeche.explore(\n",
     "    style_kwds={\n",
     "        \"fillColor\": GEHSTEIGE_FILL_COLOUR,\n",
     "        \"fillOpacity\": 0.9,\n",
@@ -134,10 +194,9 @@
     "    },\n",
     "    zoom_start=18,\n",
     "    max_zoom=32,\n",
-    "    tiles=ORTHOFOTO_TILE_URL,\n",
-    "    attr=\"Datenquelle: Stadt Wien – data.wien.gv.at\",\n",
+    "    tiles=xyzservices.providers.WienOGD.Orthofoto,\n",
     ")\n",
-    "uebersichtskarte = parkplaetze.explore(\n",
+    "uebersichtskarte = parkflaechen.explore(\n",
     "    m=uebersichtskarte,\n",
     "    style_kwds={\n",
     "        \"fillColor\": PARKPLAETZE_FILL_COLOUR,\n",
