--- a/strategischer.ipynb
+++ b/strategischer.ipynb
@@ -8,9 +8,14 @@
    "outputs": [],
    "source": [
     "import datetime\n",
+    "import math\n",
+    "import pathlib\n",
+    "\n",
+    "import folium\n",
     "import geopandas\n",
     "import joblib\n",
-    "import pathlib\n",
+    "import pygeoops\n",
+    "import shapely\n",
     "import urllib.parse\n",
     "import xyzservices"
    ]
@@ -37,6 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "MINDESTBREITE = 1.5  # meter\n",
+    "MINDESTFLAECHE = 20  # quadratmeter\n",
+    "\n",
     "CRS = \"EPSG:31256\"\n",
     "\n",
     "WFS_BASE_URL = (\n",
@@ -116,6 +124,7 @@
    "source": [
     "parkflaechen = cached_geopandas_read_file(PARKFLAECHEN_AUF_GEHSTEIG_WFS_URL)\n",
     "parkflaechen.crs = CRS\n",
+    "parkflaechen = parkflaechen.set_index(\"gml_id\")\n",
     "parkflaechen"
    ]
   },
@@ -128,6 +137,7 @@
    "source": [
     "gehsteig = cached_geopandas_read_file(GEHSTEIG_WFS_URL)\n",
     "gehsteig.crs = CRS\n",
+    "gehsteig = gehsteig.set_index(\"gml_id\")\n",
     "gehsteig"
    ]
   },
@@ -135,18 +145,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dab98146-6333-4f1b-b34c-b9f5e7ca2e90",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gehsteig_neben_parkflaeche = gehsteig.sjoin_nearest(\n",
     "    parkflaechen,\n",
     "    max_distance=MAX_DISTANCE,\n",
-    "    lsuffix=\"\",\n",
+    "    lsuffix=\"gehsteig\",\n",
     "    rsuffix=\"parkflaeche\",\n",
-    "    distance_col=\"Abstand Gehsteig/Parkfläche\",\n",
-    ")\n",
+    "    # distance_col=\"Abstand Gehsteig/Parkfläche\",\n",
+    ")[[\"geometry\"]].dissolve().explode().reset_index(drop=True)\n",
     "gehsteig_neben_parkflaeche"
    ]
   },
@@ -154,24 +162,109 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "de9e5828-78cd-4b8f-bd74-58c0bd2df7d2",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "gehsteig_neben_parkflaeche[\"Abstand Gehsteig/Parkfläche\"].describe()"
+    "gehsteig_neben_parkflaeche[\"centerline\"] = pygeoops.centerline(gehsteig_neben_parkflaeche.geometry)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8688876a-8be0-47d3-bf1f-4bec3c18e3c2",
+   "id": "ec79c041-7d09-4a2a-8328-57a0738fd22b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = gehsteig_neben_parkflaeche.dissolve().explode()  # .area.describe()"
+    "def durchschnittsbreite(polygon):\n",
+    "    # Die durchschnittliche Breite eines Polygons berechnen/schätzen\n",
+    "    #\n",
+    "    # Der Algorithmus ist an den (hier)[https://web.archive.org/web/20230329134916/https://geoobserver.wordpress.com/2023/03/27/qgis-tipp-flussbreiten-ermitteln-aber-wie/]\n",
+    "    # besprochenen Ansatz zur Flußbreitenbeschriftung\n",
+    "    # angelehnt.\n",
+    "    #\n",
+    "    # Wir konstruieren zunächst Linestrings die an 10 gleichmäßig verteilten\n",
+    "    # Punkten normal auf die Centerline des Polygons stehen, clippen diese Linien\n",
+    "    # dann mit dem Polygon, und berechnen deren Länge (und schließlich den\n",
+    "    # Durchschnitt dieser Längen\n",
+    "    \n",
+    "    MAX_LAENGE_NORMALE = 30  # wenn gehsteige breiter als 30 meter sind sind sie uns eh wurscht\n",
+    "    \n",
+    "    zwoelf_punkte = [\n",
+    "        shapely.line_interpolate_point(\n",
+    "            pygeoops.centerline(polygon),\n",
+    "            distance=(i * 1.0/11.0),\n",
+    "            normalized=True,\n",
+    "        ) for i in range(12)\n",
+    "    ]\n",
+    "\n",
+    "    normale = []\n",
+    "    for (previous_point, point, next_point) in zip(\n",
+    "        zwoelf_punkte[:-2], zwoelf_punkte[1:-1], zwoelf_punkte[2:]\n",
+    "    ):\n",
+    "        dx = next_point.x - previous_point.x\n",
+    "        dy = next_point.y - previous_point.y\n",
+    "        laenge = math.sqrt(dx**2 + dy**2)\n",
+    "        dx /= laenge\n",
+    "        dy /= laenge\n",
+    "        normale.append(\n",
+    "            shapely.intersection(\n",
+    "                shapely.LineString(\n",
+    "                    [\n",
+    "                        [point.x - (dx * laenge), point.y + (dy * laenge)],\n",
+    "                        [point.x + (dx * laenge), point.y - (dy * laenge)],\n",
+    "                    ],\n",
+    "                ),\n",
+    "                polygon\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "    normale = [shapely.intersection(n, polygon) for n in normale]\n",
+    "    laengen = [shapely.length(n) for n in normale]\n",
+    "    average_length = sum(laengen) / len(laengen)\n",
+    "    \n",
+    "    return average_length    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6bfa4c3-df7c-4e64-b997-5fa6a3190c96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gehsteig_neben_parkflaeche[\"breite\"] = gehsteig_neben_parkflaeche.geometry.apply(durchschnittsbreite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4542e15b-e0a6-4e27-8679-5cf85525d5a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gehsteig_neben_parkflaeche[\"breite\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ce36d2c-6e25-4b83-b2ce-ebf2698b40d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gehsteig_neben_parkflaeche = gehsteig_neben_parkflaeche[(gehsteig_neben_parkflaeche.breite < MINDESTBREITE) & (gehsteig_neben_parkflaeche.area > MINDESTFLAECHE)][[\"geometry\", \"breite\"]]\n",
+    "gehsteig_neben_parkflaeche"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37092d90-195f-4a0d-8d97-4a73c341312f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gehsteig_neben_parkflaeche.to_file(\"/tmp/gehsteig_neben_parkflaeche.gpkg\")\n",
+    "parkflaechen.to_file(\"/tmp/parkflaechen.gpkg\")"
    ]
   },
   {
@@ -181,7 +274,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# uebersichtskarte = gehsteige.explore(\n",
+    "tile_layer = folium.raster_layers.TileLayer(xyzservices.providers.WienOGD.Orthofoto, opacity=0.1)\n",
+    "\n",
     "uebersichtskarte = gehsteig_neben_parkflaeche.explore(\n",
     "    style_kwds={\n",
     "        \"fillColor\": GEHSTEIGE_FILL_COLOUR,\n",
@@ -194,7 +288,8 @@
     "    },\n",
     "    zoom_start=18,\n",
     "    max_zoom=32,\n",
-    "    tiles=xyzservices.providers.WienOGD.Orthofoto,\n",
+    "    tiles=tile_layer\n",
+    "    #tiles=xyzservices.providers.WienOGD.Orthofoto,\n",
     ")\n",
     "uebersichtskarte = parkflaechen.explore(\n",
     "    m=uebersichtskarte,\n",
